--- a/website-cv.Rmd
+++ b/website-cv.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Ulrik Lyngs: CV"
+title: "Salma Elshahawy: CV"
 output:
   html_document:
     css: ["css/make-cv-like-other.css", "css/one-column-cv.css", "css/website-page.css", "css/style.css", "fontawesome-free-5.8.1-web/css/all.min.css"]
@@ -18,7 +18,7 @@ library(knitr)
 publications <- readxl::read_xlsx("_cv_data/publications.xlsx")
 
 #### all other entries #####
-cv_entries <- read_csv("_cv_data/cv_entries.csv")
+cv_entries <- readxl::read_xlsx("_cv_data/cv_entries.xlsx")
 
 ```
 
@@ -47,110 +47,6 @@ cv_entries %>%
   kable()
 ```
 
-## Research {.tabset .output-header}
-### Publications {.nohead .publications}
-```{r}
-publications_table <- publications %>%
-  arrange(desc(year), type) %>%
-  mutate(author_year = str_c(authors_full, " (", year, "). ")) %>%
-  #mutate(author_year = str_c("*", authors, " (", year, ")*. ")) %>%  #italicise authors and year
-  mutate(title = ifelse(!is.na(url), str_c("[", title, "](", url, ")"), title)) %>% #turn title into link
-  #mutate(title = str_c("<span style='text-decoration: underline'>", title, "</span>")) %>% #underline title
-  mutate(citation = ifelse(!is.na(award),
-                           str_c(author_year, title, venue, "<i class='fas fa-award'></i><em>", award, "</em>", sep = " "),
-                           str_c(author_year, title, venue, sep = " "))) %>%
-  mutate(citation = str_replace(citation, "Ulrik Lyngs", "_Ulrik Lyngs_")) # make my name italicised
-
-publications_table %>%
-  filter(type != "master's thesis") %>%
-  select(type, citation) %>%
-  knitr::kable()
-
-```
-
-### Talks {}
-```{r}
-library(DT)
-cv_entries %>% 
-  filter(type == 'talk') %>% 
-  mutate(where = str_replace(where, "\\[([^]]*)\\]\\(([^\\s^\\)]*)[\\s\\)]", "<a href='\\2'>\\1</a>")) %>% 
-  mutate(what = str_c("<em>", what, "</em>, ", where)) %>% 
-  select(Year = year_begin, Talk = what) %>% 
-  datatable(rownames = FALSE, escape = FALSE, class = 'row-border', options = list(
-  pageLength = 10
-))
-
-
-# cv_entries %>% 
-#   filter(type == 'talk') %>% 
-#   mutate(what = str_c("*", what, "*, ", where)) %>% 
-#   select(year_begin, what) %>% 
-#   kable()
-  
-```
-
-### Posters {.nohead .posters}
-```{r}
-cv_entries %>% 
-  filter(type == 'poster') %>%
-  mutate(what = str_c("*", what, "*, ", where)) %>% 
-  select(year_begin, what) %>% 
-  arrange(desc(year_begin)) %>% 
-  kable()
-```
-
-## Teaching experience {.teaching .service .nohead}
-```{r}
-cv_entries %>% 
-  filter(type == 'teaching') %>% 
-  mutate(what = ifelse(!is.na(additional_info), 
-    str_c("<span class='work-title'>", what, "</span><br class='work-break'>", where, "<br>", additional_info),
-    str_c("<span class='work-title'>", what, "</span><br class='work-break'>", where))) %>% 
-  mutate(year = ifelse(!is.na(year_end), str_c(year_begin, " --- ", year_end), year_begin)) %>% 
-  select(year, what) %>% 
-  kable()
-```
-
-## Other {.tabset .output-header}
-### Grants and Awards {.grants .nohead}
-```{r}
-cv_entries %>% 
-  filter(type == 'grants_and_awards') %>% 
-  mutate(what = str_c(what, ", ", where)) %>% 
-  select(year_begin, what) %>% 
-  kable()
-```
-
-
-### Media coverage {.media .nohead}
-```{r}
-cv_entries %>% 
-  filter(type == 'media') %>%
-  select(year_begin, what) %>% 
-  kable()
-```
-
-### Service {.service .nohead}
-```{r}
-cv_entries %>% 
-  filter(type == 'service') %>% 
-  mutate(year_end = ifelse(year_end == "present", "", year_end)) %>%
-  mutate(where = ifelse(!is.na(url), str_c("[", where, "](", url, ")"), where)) %>% 
-  mutate(what = ifelse(!is.na(additional_info),
-                       str_c(what,
-                      "<br class='work-break'>", 
-                      where),
-                      str_c(what,
-                      "<br class='work-break'>", 
-                      where))) %>% 
-  mutate(year = ifelse(!is.na(year_end), 
-                       str_c(year_begin, " --- ", year_end),
-                       year_begin)) %>% 
-  select(year, what) %>% 
-  kable()
-
-```
-
 
 # Work (non-academia)
 ## Selected work experience {.work .nohead .vertical-top}
@@ -165,14 +61,6 @@ cv_entries %>%
   kable()
 ```
 
-## Professional development {.prof-dev .nohead}
-```{r}
-cv_entries %>% 
-  filter(type == 'prof-dev') %>% 
-  mutate(what = str_c(what, ", ", where)) %>% 
-  select(year_begin, what) %>% 
-  kable()
-```
 
 # Technical
 ## Software development {.cv-table .nohead .vertical-top}
