--- a/content/contact-info.Rmd
+++ b/content/contact-info.Rmd
@@ -4,11 +4,11 @@
 
 | Center | Left |
 |:------:|:-----|
-| <i class="fas fa-map-marker-alt"></i>|Department of Computer Science,\
-University of Oxford, Oxford, UK|
-| <i class="fas fa-envelope"></i> | ulrik.lyngs\@cs.ox.ac.uk |
-| <i class="fas fa-globe"></i> | [ulriklyngs.com](https://ulriklyngs.com) |
-| <i class="fab fa-github"></i> | [ulyngs](https://github.com/ulyngs/) |
+| <i class="fas fa-map-marker-alt"></i>|Graduate student in the Department of Analytics and Data Science,\
+The City University of New York, New York, USA|
+| <i class="fas fa-envelope"></i> | salmaeng\@gmail.com |
+| <i class="fas fa-globe"></i> | []() |
+| <i class="fab fa-github"></i> | [salma71](https://github.com/ulyngs/) |
 
 </div>
 ```
