--- a/website-cv.Rmd
+++ b/website-cv.Rmd
@@ -1,11 +1,10 @@
 ---
-title: "Salma Elshahawy: CV"
+title: 'Salma Elshahawy: CV'
 output:
   html_document:
     css: ["css/make-cv-like-other.css", "css/one-column-cv.css", "css/website-page.css", "css/style.css", "fontawesome-free-5.8.1-web/css/all.min.css"]
     toc: true
     toc_float: true
-
 ---
 
 
@@ -98,6 +97,8 @@ projects %>%
 knitr::kable()
 ```
 
+
+
+
+
 ^[This website is done by R-markdown and pagedown package using R]
-
-
