--- a/index.Rmd
+++ b/index.Rmd
@@ -1,13 +1,105 @@
 ---
-title: "Pagedown CVs"
-author: "Salma Elshahawy"
-date: "05/04/2019"
-output: 
+title: 'Salma Elshahawy: CV'
+output:
   html_document:
+    css: ["css/make-cv-like-other.css", "css/one-column-cv.css", "css/website-page.css", "css/style.css", "fontawesome-free-5.8.1-web/css/all.min.css"]
+    toc: true
+    toc_float: true
     self_contained: false
 ---
 
-This repository has different versions of my resume, with the paged versions created with [`pagedown`](https://github.com/rstudio/pagedown) (NOTE: for now 1 and 2 only works properly in Chrome, as some aspects of CSS Paged Media are only supported by this browser):
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
+library(tidyverse)
+library(knitr)
+
+#### projects #####
+projects <- readxl::read_xlsx("_cv_data/projects.xlsx")
+
+#### all other entries #####
+cv_entries <- readxl::read_xlsx("_cv_data/cv_entries.xlsx")
+
+```
+
+<br>
+
+# Summary
+
+I am a full stack software Engineer with a passion for cleanly written, organized, and well-tested code. Have a special passion about **Python** as a data _analysis language_. 
+
+I have experience using Javascript, Ruby, R, Java, and their frameworks. I've developed many applications in many languages especially in financial industry. My background in mechanical engineering helped me to  enhance my abilities as a **Software Engineer**.
+
+I’m thoughtful in my approach to programming and have refined my skills through building various applications using various stacks. I am a strong problem solver, currently looking to contribute my range of skills to a team that needs a dedicated performer with a broad grasp of technologies.
+
+I like to learn by reading and to convey the learning skills via writing. I have a blogpost on [Medium](https://medium.com/@salmaeng71) - Kindly check it out. Many followers find it useful to them.
+
+You can download a brief version of [my CV as PDF](https://github.com/salma71).
+
+<br>
+
+## Skills {.technical .nohead}
+```{r}
+cv_entries %>% 
+  filter(type == 'technical') %>% 
+  mutate(what = str_c("- *", what, "* ", additional_info)) %>% 
+  select(what) %>% 
+  kable()
+```
 
 
-The resumés pull in different subsets of cv entries that live in two separate Excel files on my machine (one for projects, one for all other cv entries).
+
+## Selected work experience
+```{r}
+cv_entries %>% 
+  filter(type == 'work', is.na(website)) %>% 
+  mutate(additional_info = replace_na(additional_info, "")) %>% 
+  mutate(what = str_c("<span class='work-title'>", what, "</span><br class='work-break'>", where, "<br>", "</span><br class='work-break'>", additional_info)) %>% 
+  arrange(desc(year_begin)) %>% 
+  mutate(year = ifelse(!is.na(year_end), str_c(year_begin, " --- ", year_end), year_begin)) %>% 
+  select(year, what) %>% 
+  kable()
+```
+
+
+## Education {.education .nohead}
+```{r}
+cv_entries %>% 
+  filter(type == 'education') %>% 
+  mutate(what = str_c(what, ", ", where)) %>% 
+  mutate(year = str_c(year_begin, " --- ", year_end)) %>% 
+  select(year, what) %>% 
+  kable()
+```
+
+## Projects {.tabset .nohead .publications .tabset-fade}
+
+### Data science
+```{r}
+projects %>%
+  filter(type == "data science") %>%
+  mutate(title = ifelse(!is.na(url), str_c("<span class='work-title'>","[", title, "](", url, ")", "</span><br class='work-break'>",  "<br>", "</span><br class='work-break'>"), title)) %>% #turn title into link
+  mutate(GitHub = ifelse(!is.na(GitHub), str_c("[GitHub-Repo](", GitHub, ")"), GitHub)) %>%
+  select(title, short_title, GitHub, stack) %>%
+  #mutate(title = str_c("<span style='text-decoration: underline'>", title, "</span>")) %>% #underline title
+
+knitr::kable()
+```
+
+### Web development
+```{r}
+projects %>%
+  filter(type == "web development") %>%
+  mutate(title = ifelse(!is.na(url), str_c("<span class='work-title'>","[", title, "](", url, ")", "</span><br class='work-break'>",  "<br>", "</span><br class='work-break'>"), title)) %>% #turn title into link
+  mutate(GitHub = ifelse(!is.na(GitHub), str_c("[GitHub-Repo](", GitHub, ")"), GitHub)) %>%
+  select(title, short_title, GitHub, stack) %>%
+  #mutate(title = str_c("<span style='text-decoration: underline'>", title, "</span>")) %>% #underline title
+
+knitr::kable()
+```
+
+
+
+
+
+^[This website is done by R-markdown and pagedown package using R]
