--- a/index.Rmd
+++ b/index.Rmd
@@ -5,7 +5,6 @@ output:
     css: ["css/make-cv-like-other.css", "css/one-column-cv.css", "css/website-page.css", "css/style.css", "fontawesome-free-5.8.1-web/css/all.min.css"]
     toc: true
     toc_float: true
-    self_contained: false
 ---
 
 
@@ -42,7 +41,7 @@ You can download a brief version of [my CV as PDF](https://github.com/salma71).
 ```{r}
 cv_entries %>% 
   filter(type == 'technical') %>% 
-  mutate(what = str_c("- *", what, "* ", additional_info)) %>% 
+  mutate(what = str_c("- **", what, ":** ", additional_info)) %>% 
   select(what) %>% 
   kable()
 ```
