--- a/one-column-paged.Rmd
+++ b/one-column-paged.Rmd
@@ -22,8 +22,8 @@ library(knitr)
 #### cv entries #####
 cv_entries <- readxl::read_xlsx("_cv_data/cv_entries.xlsx")
 
-#### publications #####
-publications <- readxl::read_xlsx("_cv_data/publications.xlsx")
+#### projects #####
+projects <- readxl::read_xlsx("_cv_data/projects.xlsx")
 ```
 
 <div class="grid-container">
@@ -47,143 +47,30 @@ cv_entries %>%
 ```
 
 
-## Grants and Awards {.grants .nohead .set-width}
+## Projects {.nohead .publications .set-width}
 ```{r}
-cv_entries %>% 
-  filter(type == 'grants_and_awards') %>% 
-  mutate(what = str_c(what, ", ", where)) %>% 
-  select(year_begin, what) %>% 
-  kable()
-```
-
-
-## Publications {.nohead .publications .set-width}
-```{r}
-publications_table <- publications %>%
-  arrange(desc(year), type) %>%
-  mutate(author_year = str_c(authors_full, " (", year, "). ")) %>%
-  #mutate(author_year = str_c("*", authors, " (", year, ")*. ")) %>%  #italicise authors and year
-  mutate(title = ifelse(!is.na(url), str_c("[", title, "](", url, ")"), title)) %>% #turn title into link
+projects %>%
+  filter(type == "data science") %>%
+  mutate(title = ifelse(!is.na(url), str_c("<span class='work-title'>","[", title, "](", url, ")", "</span><br class='work-break'>",  "<br>", "</span><br class='work-break'>"), title)) %>% #turn title into link
+  mutate(GitHub = ifelse(!is.na(GitHub), str_c("[GitHub-Repo](", GitHub, ")"), GitHub)) %>%
+  select(title, short_title, GitHub, stack) %>%
   #mutate(title = str_c("<span style='text-decoration: underline'>", title, "</span>")) %>% #underline title
-  mutate(citation = ifelse(!is.na(award), 
-                           str_c(author_year, title, venue, "<i class='fas fa-award'></i><em>", award, "</em>", sep = " "),
-                           str_c(author_year, title, venue, sep = " "))) %>%
-  mutate(citation = str_replace(citation, "Ulrik Lyngs", "__Ulrik Lyngs__")) # make my name bold
 
-publications_table %>%
-  filter(type != "master's thesis") %>% 
-  select(type, citation) %>%
-  knitr::kable()
+knitr::kable()
 ```
 
-## Talks {.nohead .talks .set-width}
+## Web development {.nohead .posters .set-width}
 ```{r}
-cv_entries %>% 
-  filter(type == 'talk') %>% 
-  mutate(what = str_c("*", what, "*, ", where)) %>% 
-  select(year_begin, what) %>% 
-  kable()
+projects %>%
+  filter(type == "web development") %>%
+  mutate(title = ifelse(!is.na(url), str_c("<span class='work-title'>","[", title, "](", url, ")", "</span><br class='work-break'>",  "<br>", "</span><br class='work-break'>"), title)) %>% #turn title into link
+  mutate(GitHub = ifelse(!is.na(GitHub), str_c("[GitHub-Repo](", GitHub, ")"), GitHub)) %>%
+  select(title, short_title, GitHub, stack) %>%
+  #mutate(title = str_c("<span style='text-decoration: underline'>", title, "</span>")) %>% #underline title
+
+knitr::kable()
 ```
 
-## Poster presentations {.nohead .posters .set-width}
-```{r}
-cv_entries %>% 
-  filter(type == 'poster') %>%
-  mutate(what = str_c("*", what, "*, ", where)) %>% 
-  select(year_begin, what) %>% 
-  arrange(desc(year_begin)) %>% 
-  kable()
-```
-
-## Media coverage {.media .nohead .set-width}
-```{r}
-cv_entries %>% 
-  filter(type == 'media') %>%
-  select(year_begin, what) %>% 
-  kable()
-```
-
-## Service {.service .nohead .set-width}
-```{r}
-cv_entries %>% 
-  filter(type == 'service') %>% 
-  mutate(year_end = ifelse(year_end == "present", "", year_end)) %>% 
-  mutate(where = ifelse(!is.na(url), str_c("[", where, "](", url, ")"), where)) %>% 
-  mutate(what = str_c(what, ", ", where)) %>%
-  mutate(year = ifelse(!is.na(year_end), 
-                       str_c(year_begin, " --- ", year_end), 
-                       year_begin)) %>% 
-  select(year, what) %>% 
-  kable()
-```
-
-## Teaching experience {.teaching .nohead .set-width}
-```{r}
-cv_entries %>% 
-  filter(type == 'teaching') %>% 
-  mutate(what = ifelse(!is.na(additional_info), 
-    str_c("<span class='work-title'>", what, "</span><br class='work-break'>", where, "<br>", additional_info),
-    str_c("<span class='work-title'>", what, "</span><br class='work-break'>", where))) %>% 
-  mutate(year = ifelse(!is.na(year_end), str_c(year_begin, " --- ", year_end), year_begin)) %>% 
-  select(year, what) %>% 
-  kable()
-```
-
-<br class="pageBreak">
-
-## Selected work experience {.work .nohead .vertical-top .set-width}
-```{r}
-cv_entries %>% 
-  filter(type == 'work', is.na(one_column_paged)) %>% 
-  mutate(additional_info = replace_na(additional_info, "")) %>% 
-  mutate(what = str_c("<span class='work-title'>", what, "</span><br class='work-break'>", where, "<br>", additional_info)) %>% 
-  mutate(year = ifelse(!is.na(year_end), str_c(year_begin, " --- ", year_end), year_begin)) %>% 
-  select(year, what) %>% 
-  kable()
-```
-
-## Professional development {.prof-dev .nohead .set-width}
-```{r}
-cv_entries %>% 
-  filter(type == 'prof-dev') %>% 
-  mutate(what = str_c(what, ", ", where)) %>% 
-  select(year_begin, what) %>% 
-  kable()
-```
-
-## Technical skills {.technical .nohead}
-```{r}
-cv_entries %>% 
-  filter(type == 'technical') %>% 
-  mutate(what = str_c("- *", what, "* ", additional_info)) %>% 
-  select(what) %>% 
-  kable()
-```
-
-## Software development {.cv-table .nohead .vertical-top .set-width}
-```{r}
-cv_entries %>% 
-  filter(type == 'programming') %>% 
-  replace_na(list(where = "", additional_info = "")) %>% 
-  mutate(what = str_c(what, ", ", where, "<br>", additional_info)) %>% 
-  select(year_begin, what) %>% 
-  arrange(desc(year_begin)) %>% 
-  kable(align = c('l', 'l'))
-```
-
-## Personal skills & volunteering {.personal .nohead .set-width}
-```{r}
-cv_entries %>%
-  filter(type == 'volunteering' & professional_2_page == 'y') %>%
-  mutate(what = str_c("<span class='work-title'>", what, "</span><br class='work-break'>", where)) %>%
-  mutate(what = ifelse(!is.na(additional_info), str_c(what, "<br>", additional_info), what)) %>%
-  mutate(year = ifelse(!is.na(year_end), 
-                       str_c(year_begin, " --- ", year_end), 
-                       year_begin)) %>%
-  arrange(order, desc(year_end), desc(year)) %>%
-  select(year, what) %>%
-  kable()
-```
 
 <br class="pageBreak">
 
