--- a/index.Rmd
+++ b/index.Rmd
@@ -27,13 +27,15 @@ cv_entries <- readxl::read_xlsx("_cv_data/cv_entries.xlsx")
 
 An entry-level data scientist with a passion for building models and translate data points into business insights. Offering exceptional programming, statistical analysis, and research abilities to extract, clean, and prepare data for data science model ingestion. 
 
-I’m thoughtful in my approach to data analysis and have refined my skills through pursuing a **master's degree in Data Science** at **CUNY university**. 
+I’m thoughtful in my approach to data analysis and have refined my skills through pursuing a **master's degree in Data Science** \
+at **CUNY university**. 
 
 I am a strong problem solver, currently looking to contribute my range of skills to a team that needs a dedicated performer with a broad grasp of technologies.
 
 I am also a full stack software Engineer with a passion for cleanly written, organized, and well-tested code. Have a special passion about **Python** as a data _analysis language_. 
 
-I have experience using Javascript, Ruby, R, Java, and their frameworks. I've developed many applications in many languages especially in financial industry. My background in mechanical engineering helped me to enhance my abilities as a **Software Engineer**.
+I have experience using Javascript, Ruby, R, Java, and their frameworks. I've developed many applications in many languages especially in financial industry. My background in mechanical engineering helped me to enhance my abilities as a\
+**Software Engineer**.
 
 
 I like to learn by reading and to convey the learning skills via writing. I have a blogpost on [Medium](https://medium.com/@salmaeng71) - Kindly check it out. Many followers find it useful to them.
